--- a/apps/angular/src/assets/i18n/en.json
+++ b/apps/angular/src/assets/i18n/en.json
@@ -1,5 +1,5 @@
 {
-    "angularExampleApp": "Angular example application",
+    "AgoraApp": "Agora",
     "menu": {
         "home": "Home",
         "about": "About",
